src/css/web-player.less
@import (inline) "../../bower_components/perfect-scrollbar/css/perfect-scrollbar.css";


@player-ID: webAudioPlayer;
@class-prefix: wap;

@player-main-color: #333;
@player-low-color: rgba(51, 51, 51, 0.2);
@player-main-border-radius: 3px;
@playlist-min-height: 250px;
@playlist-max-height: 350px;

@track-active-hover-bg: #ddd;


@font-face {
    font-family: 'Inconsolata';
    src: url('../fonts/inconsolata-webfont.eot');
    src: url('../fonts/inconsolata-webfont.eot?#iefix') format('embedded-opentype'),
         url('../fonts/inconsolata-webfont.woff2') format('woff2'),
         url('../fonts/inconsolata-webfont.woff') format('woff'),
         url('../fonts/inconsolata-webfont.ttf') format('truetype'),
         url('../fonts/inconsolata-webfont.svg#proxima_nova_rgregular') format('svg');
    font-weight: normal;
    font-style: normal;
}
@font-face {
  font-family: 'Entypo';
  src: url('../fonts/entypo.eot');
  src: url('../fonts/entypo.eot?#iefix') format('embedded-opentype'),
  url('../fonts/entypo.woff') format('woff'),
  url('../fonts/entypo.ttf') format('truetype'),
  url('../fonts/entypo.svg#entypo') format('svg');
  font-weight: normal;
  font-style: normal;
}

.transition(@setting: all, @time) {
  -webkit-transition:@setting @time ;
  -moz-transition: @setting @time ;
  -ms-transition: @setting @time ;
  -o-transition: @setting @time ;
  transition: @setting @time ;
}


#@{player-ID} {
  position: relative;
  width: 100%;
  max-width: 350px;
  min-width: 300px;
  color: @player-main-color;
  font-family: Inconsolata, sans-serif;
  font-size: 14px;
  margin: 0 auto;

  button {
    border: none;
    background: none;
    outline: none;
    cursor: pointer;
  }

  .@{class-prefix}-audiobox,
  input[type="file"]{
    display: none;
  }

  .@{class-prefix}-modal-window {
    position: absolute;
    z-index: 10;
    left: 0;
    width: 100%;
    height: 0;
    padding: 0;
    margin: 0;
    background: #fff;
    .transition(height, .2s);

    &.active {
      height: 100%;
    }

    .close {
      position: absolute;
      z-index: 20;
      top: 4px;
      right: 4px;
      font-family: 'Entypo', sans-serif;
      font-size: 15px;
      cursor: pointer;

      &:before {
        content: '\2716';
      }
    }

    .modal-content {
      height: 100%;
      padding: 0 6px;
    }
  }

  .@{class-prefix}-track-list,
  .@{class-prefix}-fileList {
    position: relative;
    min-height: @playlist-min-height;
    max-height: @playlist-max-height - 10;
    padding: 0;
    margin: 15px 0 0 0;

    li {
      position: relative;
      color: @player-main-color;
      list-style-type: none;
      font-size: 14px;
      padding: 8px 8px 8px 20px;
      cursor: pointer;

      &:nth-child(even) {
        background: #eee;
      }
      &.active:before {
        content: '\25b6';
        position: absolute;
        top: 10px;
        left: 7px;
        font-family: 'Entypo', sans-serif;
        font-size: 13px;
      }
      &:hover{
        background: @track-active-hover-bg;
      }

      span {
        display: inline-block;
        vertical-align: middle;
      }

      .delete {
        float: right;
        width: 8px;
        height: 15px;
        text-align: center;
        cursor: pointer;
        line-height: 18px;
        margin-left: 5px;

        &:before {
          display: none;
          content: '\2715';
          font-family: 'Entypo', sans-serif;
          font-size: 13px;
          vertical-align: middle;
        }
      }

      &:hover {
        .delete:before {
          display: block;
        }
      }

      .name {
        position: relative;
        max-width: 60%;
        white-space: nowrap;
        text-overflow: ellipsis;
        overflow: hidden;
      }

      .duration {
        float: right;
      }
    }
  }

  .@{class-prefix}-fileList {
    top: 0;
    max-height: 90%;
    min-height: @playlist-min-height;
    margin: 2px 0 0 0;
    .transition(top, .3s);

    li {
      cursor: default;
      padding: 8px 12px 8px 20px;

      .progressbar {
        float: right;
        opacity: .7;
        margin-left: 12px;
      }
    }
  }

  .@{class-prefix}-playlist-info,
  .@{class-prefix}-fileList-info {
    position: absolute;
    width: 90%;
    top: 0;
    left: 0;
    opacity: .8;
    border-bottom: 1px solid @player-low-color;
    padding: 0 10px 5px 20px;
    margin: 0 auto;

    li {
      display: inline-block;
      font-size: 10px;

      &.amount {
        margin-left: 5px;
      }
      &.tracks-delete {
        float: right;
        cursor: pointer;
        margin-top: 5px;
      }
    }
  }

  .@{class-prefix}-fileList-info {
    position: relative;
    top: 0;
    text-align: center;
    padding: 0 10px 5px 10px;
    .transition(top, .3s);

    li {
      font-size: 11px;

      button {
        opacity: .8;

        &:hover {
          color: @player-main-color;
          opacity: 1;
        }
      }
      &.back {
        margin-left: 10px;
      }
      &.amount {
        float: left;
        margin-top: 4px;
      }
    }
  }

  .@{class-prefix}-file-uploader {
    height: 100%;
    padding: 0;
    margin: 0;

    .@{class-prefix}-dropzone {
      position: relative;
      z-index: 5;
      top: 0;
      height: 92%;
      text-align: center;
      border: 1px dashed #bbb;
      border-radius: @player-main-border-radius;
      padding: 0;
      cursor: pointer;
      margin: 10px 4px 15px 4px;
      .transition(top, .3s);

      &.drag-active {
        color: @player-low-color;
        border: 1px dashed #777;
      }

      &:hover {
        background: none;
      }

      &:before {
        content: '';
        display: inline-block;
        margin-top: 100px;
      }
    }

    &.show-filelist {
      .@{class-prefix}-dropzone,
      .@{class-prefix}-fileList,
      .@{class-prefix}-fileList-info {
        top: -355px;
      }
    }
  }

  .@{class-prefix}-playlist {
    position: relative;
    min-height: @playlist-min-height;
    max-height: @playlist-max-height;
    padding: 5px 3px;
    overflow: hidden;
    border: 1px solid @player-main-color;
    border-radius: @player-main-border-radius;

    &.show-filelist {
      min-height: @playlist-max-height;
    }

    .@{class-prefix}-modal-window {
      bottom: 0;
    }
  }


  .@{class-prefix}-tools {
    position: relative;
    z-index: 11;
    text-align: left;
    overflow: hidden;
    border: 1px solid @player-main-color;
    border-radius: @player-main-border-radius;
    padding: 0 8px;
    margin: 2px 0 0 0;
    background: #fff;

    li {
      display: inline-block;
      list-style-type: none;
      font-family: 'Entypo', sans-serif;
      font-size: 17px;
      cursor: pointer;

      &:first-child {
        margin-left: 0;
      }

      &.upload-files {
        float: right;
        margin-right: 7px;

        &:before {
          content: '\e711';
        }
      }
      &.get-files {
        &:before {
          content: '\1f4e4'
        }
      }
    }
  }

  /*** plugin's styles ***/
  .@{class-prefix}-controls {
    .volume {
      .ui-slider-range {
        height: 8px;
        border-radius: 3px;
      }
    }
    .timeline {
      .ui-slider-range {
        height: 18px;
        border-radius: 5px;
      }
    }
  }

  .ps-container > .ps-scrollbar-y-rail {
    z-index: 10;
    display: block;
    opacity: .6;

    & > .ps-scrollbar-y {
      width: 5px;
    }
  }

  .@{class-prefix}-wap-fileList {
    .ps-container > .ps-scrollbar-y-rail {
      right: -5px !important;
    }
  }
}

